# stroy-track

./: .dockerignore  .env.bot.example  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  cli.py  main.py
app/api/: __init__.py  auth.py  crews.py  deliveries.py  deps.py  health.py  materials.py  reports.py  sites.py  users.py
app/bot/: __init__.py  __main__.py  commands.py  dispatcher.py  middlewares.py  report.py
app/core/: __init__.py  clock.py  config.py  db.py  logging.py  security.py
app/models/: __init__.py  base.py  crew.py  material.py  report.py  site.py  user.py
app/scheduler/: __init__.py  __main__.py  reminders.py  setup.py
app/schemas/: __init__.py  auth.py  base.py  crews.py  deliveries.py  materials.py  reports.py  sites.py  users.py
app/web/: __init__.py  assets.py  auth.py  deps.py  pages.py  photos.py  templating.py
app/web/templates/: _macros.html  _overview.html  base.html  dashboard.html  layout.html  login.html
migrations/: env.py
migrations/versions/: 2026_07_09_349f0541606e_initial_schema.py  2026_07_11_d529baa80695_site_dates_check_constraint.py  2026_07_23_a30754777357_индексы_по_датам_отчётов_и_поставок.py
tests/: conftest.py  fake_telegram.py  test_auth.py  test_bot.py  test_config.py  test_crews.py  test_deliveries.py  test_health.py  test_logging.py  test_materials.py  test_reminders.py  test_report_dialog.py  test_reports.py  test_scheduler.py  test_sites.py  test_users.py  test_web_auth.py  test_web_overview.py  test_web_photos.py
