[project]
name = "stroytrack"
version = "0.1.0"
description = "Учёт строительных площадок: REST API, Telegram-бот, дашборд"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "pyjwt>=2.10",
    "pwdlib[argon2]>=0.2",
    "python-multipart>=0.0.18",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "RUF", # ruff-specific
]
# RUF001-003 — «неоднозначные» юникод-символы: ложные срабатывания на русских комментариях
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# один event loop на всю сессию: async-движок SQLAlchemy создаётся один раз
# и должен использоваться из того же loop во всех тестах
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
